--- a/common/build.gradle
+++ b/common/build.gradle
@@ -3,10 +3,11 @@ apply plugin: 'kotlin-android'
 apply plugin: "kotlin-android-extensions"
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlinx-serialization'
+apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
 
 def srcDirs = [
-        "serialization",
         "async",
+        "serialization",
 
 ]
 android {
@@ -232,45 +233,7 @@ dependencies {
      * ===============================monitor end=============================
      */
 
-    /**
-     * ===============================test start=============================
-     */
 
-    androidTestApi 'androidx.test.uiautomator:uiautomator-v18:2.2.0-alpha1'
-    // Dependencies for local unit tests
-    testImplementation 'junit:junit:4.12'
-//    testImplementation "org.mockito:mockito-all:1.10.19"
-//    testImplementation "org.mockito:mockito-core:${rootProject.ext.mockitoVersion}"
-//    testImplementation "org.mockito:mockito-inline:${rootProject.ext.mockitoVersion}"
-//    testImplementation "org.hamcrest:hamcrest-all:${rootProject.ext.hamcrestVersion}"
-
-    // Espresso dependencies
-    androidTestApi "androidx.test.espresso:espresso-core:3.1.1"
-    androidTestApi "androidx.test.espresso:espresso-contrib:3.1.1"
-    androidTestApi "androidx.test.espresso:espresso-intents:3.1.1"
-    androidTestApi "androidx.test.espresso:espresso-accessibility:3.1.1"
-    androidTestApi "androidx.test.espresso:espresso-web:3.1.1"
-    androidTestApi "androidx.test.espresso.idling:idling-concurrent:3.1.1"
-    // The following Espresso dependency can be either "implementation"
-    // or "androidTestImplementation", depending on whether you want the
-    // dependency to appear on your APK's compile classpath or the test APK
-    // classpath.
-    androidTestApi "androidx.test.espresso:espresso-idling-resource:3.1.1"
-
-    // Dependencies for Android unit tests
-    androidTestApi "junit:junit:${rootProject.ext.junitVersion}"
-    androidTestApi "org.mockito:mockito-android:${rootProject.ext.mockitoVersion}"
-    androidTestApi 'com.google.dexmaker:dexmaker:1.2'
-    androidTestApi 'com.google.dexmaker:dexmaker-mockito:1.2'
-
-    // Android Testing Support Library's runner and rules
-    androidTestApi "androidx.test:runner:1.1.1"
-    androidTestApi "androidx.test:rules:1.1.1"
-    androidTestApi 'androidx.test:monitor:1.1.0'
-
-    /**
-     * ===============================test end=============================
-     */
 
 
 }
