--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'realm-android'
+apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -33,11 +34,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    api project(path: ':common')
 
     /**
      * ================================database start==============================
