--- a/uicomponent/build.gradle
+++ b/uicomponent/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
 
 def srcDirs = [
         "carousel",
@@ -98,7 +99,6 @@ dependencies {
     /**
      * ================================ui end=====================================
      */
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+
 }
