--- a/common/build.gradle
+++ b/common/build.gradle
@@ -126,11 +126,11 @@ dependencies {
     //api 'com.google.code.gson:gson:2.8.2'
 
 
-    api 'com.alibaba:fastjson:1.1.71.android'
+    api 'com.alibaba:fastjson:1.2.54'
 
-    implementation("com.squareup.moshi:moshi:1.8.0")
-    implementation 'com.squareup.moshi:moshi-adapters:1.8.0'
-    implementation("com.squareup.moshi:moshi-kotlin:1.8.0")
+    api("com.squareup.moshi:moshi:1.8.0")
+    api 'com.squareup.moshi:moshi-adapters:1.8.0'
+    api("com.squareup.moshi:moshi-kotlin:1.8.0")
     kapt("com.squareup.moshi:moshi-kotlin-codegen:1.8.0")
     api "com.squareup.retrofit2:converter-gson:${rootProject.ext.retrofitVersion}"
 //    api "com.squareup.retrofit2:converter-moshi:${rootProject.ext.retrofitVersion}"
@@ -155,9 +155,9 @@ dependencies {
     // Lifecycles only (no ViewModel or LiveData)
     api 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
     annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0-alpha01'
-    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha04"
-    api "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha04"
-    api "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha04"
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha05"
+    api "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha05"
+    api "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05"
     //If you use Java 8 Language, then observe events with DefaultLifecycleObserver
 //    api 'androidx.lifecycle:lifecycle-common-java8:2.1.0-alpha03'
 //    api 'com.trello.rxlifecycle3:rxlifecycle:3.0.0'
