networkExprimental move network test dir

--- a/chatroom/build.gradle
+++ b/chatroom/build.gradle
@@ -12,6 +12,7 @@ if (isComponentMode.toBoolean()) {
 } else {
     apply plugin: 'com.android.library'
 }
+apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
 
 
 android {
