--- a/script/testlib.gradle
+++ b/script/testlib.gradle
@@ -35,7 +35,7 @@ dependencies{
 
     // Android Testing Support Library's runner and rules
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-//    androidTestApi "androidx.test:runner:1.1.1"
+    androidTestApi "androidx.test:runner:1.1.1"
     androidTestImplementation "androidx.test:rules:1.1.1"
     androidTestImplementation 'androidx.test:monitor:1.1.0'
 
