--- a/common/build.gradle
+++ b/common/build.gradle
@@ -228,6 +228,14 @@ dependencies {
      * ===============================monitor end=============================
      */
 
+    /**
+     * ===============================image start=============================
+     */
+    api "com.github.bumptech.glide:glide:${rootProject.ext.glideVersion}"
+    annotationProcessor "com.github.bumptech.glide:compiler:${rootProject.ext.glideVersion}"
+    /**
+     * ===============================image end=============================
+     */
 
 
 
