--- a/build.gradle
+++ b/build.gradle
@@ -47,16 +47,16 @@ buildscript {
         grpcVersion = '1.20.0'
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-beta03'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.21"
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.21"
         classpath "io.realm:realm-gradle-plugin:5.7.0"
 //        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.8"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha11"
 
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.gms:google-services:4.3.2'
         classpath 'io.fabric.tools:gradle:1.28.1'
-        classpath 'com.google.firebase:firebase-plugins:1.1.5'
+        classpath 'com.google.firebase:firebase-plugins:2.0.0'
     }
 }
 
