--- a/common/build.gradle
+++ b/common/build.gradle
@@ -103,6 +103,7 @@ dependencies {
     // if you want to show more attrs about Fresco's DraweeView
 //    debugApi 'me.ele:uetool-fresco:1.0.17'
     api("com.squareup.okio:okio:2.3.0")
+    api "androidx.appcompat:appcompat:1.1.0"
     /**
      * ===============================async start================================
      */
@@ -150,11 +151,11 @@ dependencies {
     /**
      * ===============================mvvm start================================
      */
-    annotationProcessor 'androidx.databinding:databinding-compiler:3.5.0-beta01'
+    annotationProcessor 'androidx.databinding:databinding-compiler:3.6.0-alpha12'
     api 'com.github.markzhai:databinding-rv-adapter:1.0.1'
     // Lifecycles only (no ViewModel or LiveData)
-    api 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0-alpha01'
+    api 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha05'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0-alpha05'
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha05"
     api "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha05"
     api "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05"
@@ -174,15 +175,11 @@ dependencies {
 //// If you want to use Android Lifecycle for providers
 //    api 'com.trello.rxlifecycle3:rxlifecycle-android-lifecycle:3.0.0'
 //
-//// If you want to use Kotlin syntax
+// If you want to use Kotlin syntax
 //    api 'com.trello.rxlifecycle3:rxlifecycle-kotlin:3.0.0'
-//
-//// If you want to use Kotlin syntax with Android Lifecycle
+// If you want to use Kotlin syntax with Android Lifecycle
 //    api 'com.trello.rxlifecycle3:rxlifecycle-android-lifecycle-kotlin:3.0.0'
-//
-//// If you want to use Navi for providers
-//// DEPRECATED: Use rxlifecycle-android-lifecycle instead. This will be removed in a future release.
-//    api 'com.trello.rxlifecycle3:rxlifecycle-navi:3.0.0'
+
     /**
      * ===============================mvvm end================================
      */
