--- a/image/build.gradle
+++ b/image/build.gradle
@@ -67,5 +67,14 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     api project(path: ':common')
 
+    /**
+     * ===============================image start=============================
+     */
+    api "com.github.bumptech.glide:glide:${rootProject.ext.glideVersion}"
+    annotationProcessor "com.github.bumptech.glide:compiler:${rootProject.ext.glideVersion}"
+    /**
+     * ===============================image end=============================
+     */
+
 
 }
