--- a/uicomponent/build.gradle
+++ b/uicomponent/build.gradle
@@ -12,6 +12,8 @@ def srcDirs = [
         "newLayoutExprimental",
         "scrollExprimental",
         "parallax",
+        "navigation",
+        "paging",
 
 ]
 android {
@@ -76,17 +78,18 @@ dependencies {
     /**
      * ================================ui start=====================================
      */
-    api "androidx.appcompat:appcompat:1.0.2"
     api "androidx.recyclerview:recyclerview:1.0.0"
-
     api 'android.arch.navigation:navigation-fragment:1.0.0'
     api 'android.arch.navigation:navigation-ui:1.0.0'
+    api 'android.arch.navigation:navigation-common-ktx:1.0.0'
+    api 'android.arch.navigation:navigation-runtime-ktx:1.0.0'
     api 'android.arch.navigation:navigation-fragment-ktx:1.0.0'
     api 'android.arch.navigation:navigation-ui-ktx:1.0.0'
-    //layout
+
+    //layout start
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
     api 'com.google.android:flexbox:1.1.0'
-    //layout
+    //layout end
 
     api 'androidx.palette:palette:1.0.0'
     /*
@@ -94,10 +97,24 @@ dependencies {
    *com.android.build.api.transform.TransformException: java.util.zip.ZipException: duplicate entry: *android/support/v4/app/INotificationSideChannel$Stub$Proxy.class
    *解决方法：需要exclude掉v4包
     */
-    api "com.google.android.material:material:1.1.0-alpha06"
+    api "com.google.android.material:material:1.1.0-alpha10"
+    api 'androidx.vectordrawable:vectordrawable:1.1.0'
 
+    //animotor
     api 'com.airbnb.android:lottie:2.8.0'
-    api 'androidx.vectordrawable:vectordrawable:1.1.0-beta01'
+
+    //rx ui
+    api 'com.jakewharton.rxbinding3:rxbinding-core:3.0.0'
+    api 'com.jakewharton.rxbinding3:rxbinding-appcompat:3.0.0'
+    api 'com.jakewharton.rxbinding3:rxbinding-drawerlayout:3.0.0'
+    api 'com.jakewharton.rxbinding3:rxbinding-leanback:3.0.0'
+    api 'com.jakewharton.rxbinding3:rxbinding-recyclerview:3.0.0'
+    api 'com.jakewharton.rxbinding3:rxbinding-slidingpanelayout:3.0.0'
+    api 'com.jakewharton.rxbinding3:rxbinding-swiperefreshlayout:3.0.0'
+    api 'com.jakewharton.rxbinding3:rxbinding-viewpager:3.0.0'
+
+
+//    api 'aandroid.arch.work:work-runtime-ktx:'
     /**
      * ================================ui end=====================================
      */
