--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ println("app start")
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: "kotlin-android-extensions"
-//apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'androidx.navigation.safeargs'
 
 apply plugin: 'versionplugin'
@@ -54,6 +54,7 @@ def getVersion() {
 def srcDirs = [
         "navigation",
         "paging",
+        "paging-lib",
 
 ]
 
@@ -168,7 +169,13 @@ android {
 
         }
     }
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 //    useLibrary 'android.test.runner'
 //    useLibrary 'android.test.base'
 //    useLibrary 'android.test.mock'
@@ -229,11 +236,13 @@ dependencies {
     implementation project(path: ':network')
     implementation project(path: ':storage')
     implementation project(path: ':uicomponent')
+    implementation project(path: ':common')
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    annotationProcessor "com.google.dagger:dagger-compiler:${rootProject.ext.daggerVersion}"
-    annotationProcessor "com.google.dagger:dagger-android-processor:$rootProject.ext.daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:2.16"
+    kapt "com.google.dagger:dagger-android-processor:2.16"
 //    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha06'
+    kapt 'androidx.room:room-compiler:2.2.0-rc01'
+    kapt "com.github.bumptech.glide:compiler:4.10.0"
 
     api 'com.crashlytics.sdk.android:crashlytics:2.10.0'
 //    implementation 'com.google.firebase:firebase-core:16.0.8'
