--- a/network/build.gradle
+++ b/network/build.gradle
@@ -164,7 +164,7 @@ dependencies {
     /**
      *  ===============================network end====================================
      */
-    kapt "com.google.dagger:dagger-compiler:${rootProject.ext.daggerVersion}"
+    kapt "com.google.dagger:dagger-compiler:2.16"
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation "com.github.jnr:jnr-unixsocket:0.23"
 }
