--- a/uicomponent/build.gradle
+++ b/uicomponent/build.gradle
@@ -79,12 +79,12 @@ dependencies {
      * ================================ui start=====================================
      */
     api "androidx.recyclerview:recyclerview:1.0.0"
-    api 'android.arch.navigation:navigation-fragment:1.0.0'
-    api 'android.arch.navigation:navigation-ui:1.0.0'
-    api 'android.arch.navigation:navigation-common-ktx:1.0.0'
-    api 'android.arch.navigation:navigation-runtime-ktx:1.0.0'
-    api 'android.arch.navigation:navigation-fragment-ktx:1.0.0'
-    api 'android.arch.navigation:navigation-ui-ktx:1.0.0'
+    api 'android.arch.navigation:navigation-fragment:1.0.0-alpha11'
+    api 'android.arch.navigation:navigation-ui:1.0.0-alpha11'
+    api 'android.arch.navigation:navigation-common-ktx:1.0.0-alpha11'
+    api 'android.arch.navigation:navigation-runtime-ktx:1.0.0-alpha11'
+    api 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha11'
+    api 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha11'
 
     //layout start
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -113,7 +113,10 @@ dependencies {
     api 'com.jakewharton.rxbinding3:rxbinding-swiperefreshlayout:3.0.0'
     api 'com.jakewharton.rxbinding3:rxbinding-viewpager:3.0.0'
 
-
+    api "androidx.paging:paging-runtime:2.1.0" // For Kotlin use paging-runtime-ktx
+    api "androidx.paging:paging-runtime-ktx:2.1.0"
+    testImplementation "androidx.paging:paging-common:2.1.0" // For Kotlin use paging-common-ktx
+    api "androidx.paging:paging-rxjava2:2.1.0" // For Kotlin use paging-rxjava2-ktx
 //    api 'aandroid.arch.work:work-runtime-ktx:'
     /**
      * ================================ui end=====================================
