--- a/common/build.gradle
+++ b/common/build.gradle
@@ -235,6 +235,7 @@ dependencies {
      */
     api "com.github.bumptech.glide:glide:4.10.0"
     kapt "com.github.bumptech.glide:compiler:4.10.0"
+    implementation 'androidx.exifinterface:exifinterface:1.1.0-alpha01'
     /**
      * ===============================image end=============================
      */
