--- a/gradle_plugin/build.gradle
+++ b/gradle_plugin/build.gradle
@@ -40,11 +40,11 @@ dependencies {
     implementation gradleApi()
     implementation localGroovy()
     implementation 'com.google.guava:guava:24.1-jre'
-    implementation 'commons-io:commons-io:2.4'
+    implementation 'commons-io:commons-io:2.5'
     implementation 'commons-codec:commons-codec:1.10'
-    implementation 'org.ow2.asm:asm:6.0'
+//    implementation 'org.ow2.asm:asm:7.0'
 //    implementation 'org.javassist:javassist:3.18.2-GA'
-    implementation 'com.android.tools.build:gradle:3.2.1'
+    implementation 'com.android.tools.build:gradle:3.5.0'
 }
 
 
