--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     api "io.realm:realm-android-library:5.7.0"
     api "io.realm:realm-android-kotlin-extensions:5.7.0"
     annotationProcessor "io.realm:realm-annotations-processor:5.7.0"
+
+    api 'com.google.firebase:firebase-database:19.1.0'
+    api 'com.google.firebase:firebase-firestore:21.1.1'
     /**
      * ================================database end==============================
      */
