--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,5 @@ android.databinding.enableV2=true
 
 isComponentMode=false
 KOTLIN_VERSION=1.2.71
+
+firebasePerformanceInstrumentationEnabled=false
