--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,17 @@
         <uses-library
             android:name="android.test.mock"
             android:required="false"/>
+        <meta-data
+            android:name="firebase_performance_logcat_enabled"
+            android:value="true" />
+<!--        在编译时停用库，但允许应用在运行时启用它-->
+        <meta-data
+            android:name="firebase_performance_collection_enabled"
+            android:value="true" />
+<!--        在编译时停用库，但不允许应用在运行时启用它-->
+<!--        <meta-data-->
+<!--            android:name="firebase_performance_collection_deactivated"-->
+<!--            android:value="true" />-->
 
         <activity android:name="com.hawksjamesf.spacecraft.ui.person.SettingsActivity"/>
         <activity
