--- a/build.gradle
+++ b/build.gradle
@@ -54,8 +54,8 @@ buildscript {
 
         classpath 'com.google.gms:google-services:4.3.2'
         classpath 'io.fabric.tools:gradle:1.28.1'
-//        classpath 'com.google.firebase:perf-plugin:1.3.1'
-        classpath 'com.google.firebase:firebase-plugins:1.1.5'
+        classpath 'com.google.firebase:perf-plugin:1.3.1'
+//        classpath 'com.google.firebase:firebase-plugins:1.1.5'
     }
 }
 
