--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,7 +87,7 @@ android {
         buildConfigField('String', 'XIAOMI_APP_ID', '"2882303761517994447"')
         buildConfigField('String', 'XIAOMI_APP_KEY', '"5921799441447"')
         manifestPlaceholders = [
-                'BUGLY_APP_ID': '3d62251014', 'BUGLY_APP_KEY': 'a15ecf84-1786-40c6-abf5-fe975fce22e6', "BUGLY_APP_VERSION": "${rootProject.ext.versionName}"
+                'BUGLY_APP_ID': '3d62251014', 'BUGLY_APP_KEY': 'a15ecf84-1786-40c6-abf5-fe975fce22e6', "BUGLY_APP_VERSION": "${rootProject.ext.versionName}",
         ]
 
         //lower 5.x
