--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,17 @@ isComponentMode=false
 KOTLIN_VERSION=1.2.71
 
 firebasePerformanceInstrumentationEnabled=false
+
+#debug start
+DEBUG_KEY_ALIAS=123456
+DEBUG_KEY_PASSWORD=123456
+DEBUG_STORE_PASSWORD=123456
+DEBUG_STORE_FILE=keystore/debug.jks
+#debug end
+
+#release start
+RELEASE_KEY_ALIAS=release
+RELEASE_KEY_PASSWORD=release
+RELEASE_STORE_PASSWORD=release
+RELEASE_STORE_FILE=keystore/release.jks
+#release end
