--- a/script/util.gradle
+++ b/script/util.gradle
@@ -46,7 +46,7 @@ def getKeyStoreProperties(List<String> keysets) {
         if (!project.hasProperty(keyset)) {
             //在local.properties中存在
             def properties = new Properties()
-            properties.load(rootProject.file('local.properties').newDataInputStream())
+            properties.load(rootProject.file('gradle.properties').newDataInputStream())
             for (String s : keysets) {
                 values.add(properties.getProperty(s))
             }
