--- a/uicomponent/build.gradle
+++ b/uicomponent/build.gradle
@@ -124,6 +124,11 @@ dependencies {
     api "androidx.work:work-gcm:2.2.0"
     androidTestImplementation "androidx.work:work-testing:2.2.0"
 //    api "androidx.work:work-firebase:2.2.0"
+
+    api 'com.firebaseui:firebase-ui-database:6.0.2'
+    api 'com.firebaseui:firebase-ui-firestore:6.0.2'
+    api 'com.firebaseui:firebase-ui-auth:6.0.2'
+    api 'com.firebaseui:firebase-ui-storage:6.0.2'
     /**
      * ================================ui end=====================================
      */
