--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ buildscript {
         classpath 'io.fabric.tools:gradle:1.28.1'
         classpath 'com.google.firebase:perf-plugin:1.3.1'
 //        classpath 'com.google.firebase:firebase-plugins:1.1.5'
+        classpath ("com.tencent.matrix:matrix-gradle-plugin:0.6.0") { changing = true }
     }
 }
 
