--- a/common/build.gradle
+++ b/common/build.gradle
@@ -9,6 +9,7 @@ apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle
 def srcDirs = [
         "async",
         "serialization",
+        "apm",
 
 ]
 android {
@@ -83,8 +84,6 @@ android {
 
         }
     }
-
-
 }
 
 dependencies {
@@ -154,9 +153,9 @@ dependencies {
     /**
      * ===============================mvvm start================================
      */
-    kapt 'androidx.databinding:databinding-compiler:3.6.0-alpha12'
+    kapt 'androidx.databinding:databinding-compiler:3.6.0-beta01'
 //    annotationProcessor 'androidx.databinding:databinding-compiler:3.6.0-alpha12'
-    api 'androidx.databinding:databinding-runtime:3.6.0-alpha12'
+    api 'androidx.databinding:databinding-runtime:3.6.0-beta01'
     api 'com.github.markzhai:databinding-rv-adapter:1.0.1'
     // Lifecycles only (no ViewModel or LiveData)
     api 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha05'
@@ -204,8 +203,6 @@ dependencies {
      */
 
 
-
-
     /**
      * ===============================monitor start=============================
      */
@@ -215,17 +212,28 @@ dependencies {
     api 'com.tencent.bugly:crashreport:3.0.0'
     api "com.orhanobut:logger:${rootProject.ext.loggerVersion}"
     //memory leak
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:${rootProject.ext.leakcanaryVersion}"
-    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${rootProject.ext.leakcanaryVersion}"
-    // Optional, if you use support library fragments:
-    debugImplementation "com.squareup.leakcanary:leakcanary-support-fragment:${rootProject.ext.leakcanaryVersion}"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:1.6.3"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:1.6.3"
+    debugImplementation "com.squareup.leakcanary:leakcanary-support-fragment:1.6.3"
 
     api 'com.google.firebase:firebase-core:17.2.0'
-    api 'com.google.firebase:firebase-perf:19.0.0'
+    api 'com.google.firebase:firebase-perf:19.0.1'
     api 'com.google.firebase:firebase-config:19.0.2'
 
     api 'com.facebook.stetho:stetho:1.5.1'
     api 'com.facebook.stetho:stetho-js-rhino:1.5.1'
+
+    api group: "com.tencent.matrix", name: "matrix-android-lib", version: "0.6.0", changing: true
+    api group: "com.tencent.matrix", name: "matrix-android-commons", version: "0.6.0", changing: true
+    api group: "com.tencent.matrix", name: "matrix-trace-canary", version: "0.6.0", changing: true
+    api group: "com.tencent.matrix", name: "matrix-resource-canary-android", version: "0.6.0", changing: true
+    api group: "com.tencent.matrix", name: "matrix-resource-canary-common", version: "0.6.0", changing: true
+//    api group: "com.tencent.matrix", name: "matrix-thread-canary", version: "0.6.0", changing: true
+    api group: "com.tencent.matrix", name: "matrix-io-canary", version: "0.6.0", changing: true
+    api group: "com.tencent.matrix", name: "matrix-sqlite-lint-android-sdk", version: "0.6.0", changing: true
+    releaseApi group: "com.tencent.matrix", name: "matrix-sqlite-lint-android-sdk-no-op", version: "0.6.0", changing: true
+
+
     /**
      * ===============================monitor end=============================
      */
@@ -235,7 +243,7 @@ dependencies {
      */
     api "com.github.bumptech.glide:glide:4.10.0"
     kapt "com.github.bumptech.glide:compiler:4.10.0"
-    implementation 'androidx.exifinterface:exifinterface:1.1.0-alpha01'
+    api 'androidx.exifinterface:exifinterface:1.1.0-rc01'
     /**
      * ===============================image end=============================
      */
