--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'realm-android'
+apply plugin: 'kotlin-android'
+apply plugin: "kotlin-android-extensions"
+apply plugin: 'kotlin-kapt'
 apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
 
 android {
@@ -40,16 +43,16 @@ dependencies {
      * ================================database start==============================
      */
     //room database
-    testImplementation 'androidx.room:room-testing:2.2.0-rc01'
-    api 'androidx.room:room-runtime:2.2.0-rc01'
-    api 'androidx.room:room-rxjava2:2.2.0-rc01'
-    annotationProcessor 'androidx.room:room-compiler:2.2.0-rc01'
+    testImplementation 'androidx.room:room-testing:2.2.0'
+    api 'androidx.room:room-runtime:2.2.0'
+    api 'androidx.room:room-rxjava2:2.2.0'
+    kapt 'androidx.room:room-compiler:2.2.0'
 
     //realm database
     api "io.realm:realm-annotations:5.7.0"
     api "io.realm:realm-android-library:5.7.0"
     api "io.realm:realm-android-kotlin-extensions:5.7.0"
-    annotationProcessor "io.realm:realm-annotations-processor:5.7.0"
+    kapt "io.realm:realm-annotations-processor:5.7.0"
 
     api 'com.google.firebase:firebase-database:19.1.0'
     api 'com.google.firebase:firebase-firestore:21.1.1'
