--- a/common/build.gradle
+++ b/common/build.gradle
@@ -98,7 +98,7 @@ dependencies {
     api "com.blankj:utilcode:1.24.2"
     api 'joda-time:joda-time:2.10'
     api 'com.googlecode.libphonenumber:libphonenumber:8.2.0'
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.31"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
 
     debugApi 'me.ele:uetool:1.0.17'
     releaseApi 'me.ele:uetool-no-op:1.0.17'
@@ -206,15 +206,17 @@ dependencies {
     /**
      * ===============================monitor start=============================
      */
+    api "com.orhanobut:logger:${rootProject.ext.loggerVersion}"
+    api 'com.jakewharton.timber:timber:4.7.1'
     //crash and anr
     api 'com.tencent.bugly:nativecrashreport:3.7.1'
 //    api 'com.tencent.bugly:crashreport_upgrade:1.3.5'
     api 'com.tencent.bugly:crashreport:3.0.0'
-    api "com.orhanobut:logger:${rootProject.ext.loggerVersion}"
     //memory leak
     debugImplementation "com.squareup.leakcanary:leakcanary-android:1.6.3"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:1.6.3"
     debugImplementation "com.squareup.leakcanary:leakcanary-support-fragment:1.6.3"
+    api 'com.github.markzhai:blockcanary-android:1.5.0'
 
     api 'com.google.firebase:firebase-core:17.2.0'
     api 'com.google.firebase:firebase-perf:19.0.1'
@@ -232,7 +234,6 @@ dependencies {
     api group: "com.tencent.matrix", name: "matrix-io-canary", version: "0.6.0", changing: true
     api group: "com.tencent.matrix", name: "matrix-sqlite-lint-android-sdk", version: "0.6.0", changing: true
     releaseApi group: "com.tencent.matrix", name: "matrix-sqlite-lint-android-sdk-no-op", version: "0.6.0", changing: true
-
 
     /**
      * ===============================monitor end=============================
