--- a/common/build.gradle
+++ b/common/build.gradle
@@ -98,7 +98,10 @@ dependencies {
     api "com.blankj:utilcode:1.24.2"
     api 'joda-time:joda-time:2.10'
     api 'com.googlecode.libphonenumber:libphonenumber:8.2.0'
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
+//    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
+//    api "org.jetbrains.kotlin:kotlin-stdlib-jre8"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.50"
+//    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.60-eap-25"
 
     debugApi 'me.ele:uetool:1.0.17'
     releaseApi 'me.ele:uetool-no-op:1.0.17'
@@ -109,7 +112,9 @@ dependencies {
     /**
      * ===============================async start================================
      */
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
+    api "org.jetbrains.anko:anko-coroutines:0.10.8"
     api "io.reactivex.rxjava2:rxkotlin:2.2.0"
     api "io.reactivex.rxjava2:rxjava:${rootProject.ext.rxjavaVersion}"
     api "io.reactivex.rxjava2:rxandroid:${rootProject.ext.rxandroidVersion}"
